@@ -264,10 +264,10 @@ memset(VAR,0,SIZE * sizeof(TYPE));
 #define mode_size_all          1<<20
 #define mode_timestamp         1<<21
 #define mode_csv               1<<22
-#define mode_read_from_file    1<<23
-#define mode_ad_triage         1<<24
+#define mode_read_from_file    1<<25
+#define mode_ad_triage         1<<26
 
-// Modes 25-48 are reserved for future use.
+// Modes 27-48 are reserved for future use.
 //
 // Note that the LL is required to avoid overflows of 32-bit words.
 // LL must be used for any value equal to or above 1<<31. 
